objects/acknowltng__QuestionArticleLink__c.object
<CustomObject>
    <fields>
        <fullName>acknowltng__Article_TestOnly__c</fullName>
        <description>Field as a substitute for Article look-up field during tests</description>
        <label>Article Test Only</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acknowltng__KnowledgeArticleId__c</fullName>
        <externalId>true</externalId>
        <label>Knowledge Article Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acknowltng__Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>acknowltng__CaseDeflectionQuestion__c</referenceTo>
        <relationshipLabel>Question Article Links</relationshipLabel>
        <relationshipName>QuestionArticleLinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Question Article Link</label>
    <listViews>
        <fullName>acknowltng__All</fullName>
        <columns>NAME</columns>
        <columns>acknowltng__Question__c</columns>
        <columns>acknowltng__KnowledgeArticleId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QAL-{00000}</displayFormat>
        <label>Question Article Link Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Article Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>